# gnxi

./: go.mod  go.sum
gnmi/modeldata/gostruct/: update.sh
gnmi/modeldata/gostruct/app/: CMakeLists.txt  main.cpp  meson.build
gnmi_target/: gnmi_target.go  run.sh
